load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//third-party/docker:image.bzl", "GO_DEFAULT_BASE")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "server",
    embed = [":lib"],
    pure = "on",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    deps = [
        "//proto/product:product_go_proto",
        "@com_github_alandiegosantos_monorepo//common/go/goinit:go_default_library",
        "@com_github_alandiegosantos_monorepo//services/product/pkg/handler:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//credentials/xds:go_default_library",
        "@org_golang_google_grpc//grpclog/glogger:go_default_library",
        "@org_golang_google_grpc//xds:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":server"],
)

oci_image(
    name = "image",
    base = GO_DEFAULT_BASE,
    entrypoint = ["/server"],
    tars = [":tar"],
)
