load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "handler",
    srcs = ["products.go"],
    importpath = "github.com/alandiegosantos/monorepo/services/product/pkg/handler",
    deps = [
        "//proto/detail:go",
        "//proto/product:go",
        "//proto/rating:go",
        "//proto/review:go",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
