load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "handler",
    srcs = ["products.go"],
    importpath = "",
    deps = [
        "//proto/detail:detail_go_proto",
        "//proto/product:product_go_proto",
        "@com_github_alandiegosantos_monorepo//proto/review:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
