load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "istio.go",
        "main.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@io_istio_client_go//pkg/apis/networking/v1beta1:go_default_library",
        "@io_k8s_cli_runtime//pkg/printers:go_default_library",
        "@org_golang_google_protobuf//compiler/protogen:go_default_library",
        "@org_golang_google_protobuf//types/pluginpb:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-istio",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)