load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"]),
    importpath = "github.com/alandiegosantos/monorepo/infra/xdsserver/pkg/registry/datasource",
    deps = [
        "//common/go/goinit",
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/config/listener/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/config/route/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/http/router/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/http_connection_manager/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//envoy/service/route/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/types:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/resource/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/server/v3:go_default_library",
        "@com_github_envoyproxy_go_control_plane//pkg/wellknown:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/wrapperspb:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
