load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"]),
    importpath = "github.com/alandiegosantos/monorepo/infra/xdsserver/pkg/xds/hash",
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:go_default_library",
    ],
)
